Commercial and Purchase email - fixed the email now the attachament will include our pdf

--- a/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
+++ b/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
@@ -80,7 +80,7 @@
             </div>
             <div class="mt-5 clearfix">
 <t t-set="company" t-value="o.company_id or env.company"/>
-<t t-set="bg_logo" t-value="image_data_uri(company.background_logo)"/>
+<t t-set="bg_logo" t-value="company.background_logo and image_data_uri(company.background_logo) or ''"/>
             <div class="page"
                  t-attf-style="background-image: url('{{ bg_logo }}');
                    background-size: 290mm auto;
