--- a/custom_addons/nn_commercial_docs/reports/external_layout_update.xml
+++ b/custom_addons/nn_commercial_docs/reports/external_layout_update.xml
@@ -6,7 +6,10 @@
              style="padding-bottom: 10px;">
             <div class="row align-items-start">
                 <div class="col-2">
-                        <img t-att-src="image_data_uri(company.logo)" style="max-height: 45px;" alt="Logo"/>
+                    <t t-if="o.pdf_logo">
+                                                <img t-att-src="image_data_uri(company.logo)" style="max-height: 45px;" alt="Logo"/>
+
+                    </t>
                 </div>
             </div>
 
