--- a/custom_addons/nn_commercial_docs/reports/sale_order_report.xml
+++ b/custom_addons/nn_commercial_docs/reports/sale_order_report.xml
@@ -147,6 +147,7 @@
                     </t>
                 </tbody>
             </table>
+
             <div class="clearfix" name="so_total_summary">
                 <div id="total" class="row" name="total">
                     <div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ms-auto">
@@ -159,18 +160,22 @@
                 </div>
             </div>
             <div class="oe_structure"></div>
-            <div t-if="not doc.signature" class="oe_structure"></div>
-            <div t-else="" class="mt-4 ml64 mr4" name="signature">
-                <div class="offset-8">
-                    <strong>Signature</strong>
-                </div>
-                <div class="offset-8">
-                    <img t-att-src="image_data_uri(doc.signature)" style="max-height: 4cm; max-width: 8cm;"/>
-                </div>
-                <div class="offset-8 text-center">
-                    <span t-field="doc.signed_by">Oscar Morgan</span>
-                </div>
-            </div>
+   <t t-if="user.signature">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+                            <div widget="html" t-field="user.signature"/>
+
+        <p t-esc="user.name" style="margin-top: 5px;" />
+    </div>
+</t>
+<t t-else="">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+        <br/><br/><br/>
+        <p t-esc="user.name" style="text-decoration: underline;" />
+    </div>
+</t>
+
             <div>
                 <span t-field="doc.note" t-attf-style="#{'text-align:justify;text-justify:inter-word;' if doc.company_id.terms_type != 'html' else ''}" name="order_note"/>
                 <p t-if="not is_html_empty(doc.payment_term_id.note)">
