--- a/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
+++ b/custom_addons/nn_commercial_docs/reports/account_invoice_report_templates.xml
@@ -1,16 +1,7 @@
 <odoo>
 
 
-
-
-
-
-
-
-
-
-
-<!--    This is the part of the account Move -->
+    <!--    This is the part of the account Move -->
     <template id="account.report_invoice_document">
         <t t-call="nn_commercial_docs.external_layout_new">
             <t t-set="o" t-value="o.with_context(lang=lang)"/>
@@ -79,10 +70,10 @@
                 </t>
             </div>
             <div class="mt-5 clearfix">
-<t t-set="company" t-value="o.company_id or env.company"/>
-<t t-set="bg_logo" t-value="company.background_logo and image_data_uri(company.background_logo) or ''"/>
-            <div class="page"
-                 t-attf-style="background-image: url('{{ bg_logo }}');
+                <t t-set="company" t-value="o.company_id or env.company"/>
+                <t t-set="bg_logo" t-value="company.background_logo and image_data_uri(company.background_logo) or ''"/>
+                <div class="page"
+                     t-attf-style="background-image: url('{{ bg_logo }}');
                    background-size: 290mm auto;
                    background-repeat: no-repeat;
                    background-position: -70mm 40mm;
@@ -115,7 +106,61 @@
                         </span>
                         <span t-elif="o.move_type == 'in_refund'">Vendor Credit Note</span>
                         <span t-elif="o.move_type == 'in_invoice'">Vendor Bill</span>
+                    </h2>
+                    <div class="row" style="margin-bottom: 20px;">
+                        <!-- LEFT: Company Info (Your Company, e.g., REDSYS) -->
+                        <div class="col-6">
+                            <strong t-esc="company.name"/>
+                            <br/>
+                            <span t-esc="company.street"/>
+                            <t t-if="company.street2">,
+                                <span t-esc="company.street2"/>
+                            </t>
+                            <br/>
+                            <span t-esc="company.zip"/>
+                            <span t-esc="company.city"/>,
+                            <span t-esc="company.country_id.name"/>
+                            <br/>
+                            <strong>Tel:</strong>
+                            <span t-esc="company.phone"/>
+                            <br/>
+                            <strong>Email:</strong>
+                            <span t-esc="company.email"/>
+                            <br/>
+                            <strong>TVA:</strong>
+                            <span t-esc="company.vat"/>
+                            <br/>
+                            <strong>Compte Bancaire:</strong>
+                            <span t-esc="company.bank_ids and company.bank_ids[0].acc_number or ''"/>
+                        </div>
+
+                        <!-- RIGHT: Customer Info (Partner) -->
+                        <div class="col-6 text-right">
+                            <strong>À:</strong>
+                            <br/>
+                            <strong t-esc="o.partner_id.name"/>
+                            <br/>
+                            <strong>Tel:</strong>
+                            <span t-esc="o.partner_id.phone"/>
+                            <br/>
+                            <strong>Adresse:</strong>
+                            <span t-esc="o.partner_id.street"/>
+                            <t t-if="o.partner_id.street2">,
+                                <span t-esc="o.partner_id.street2"/>
+                            </t>
+                            <br/>
+                            <span t-esc="o.partner_id.zip"/>
+                            <span t-esc="o.partner_id.city"/>,
+                            <span t-esc="o.partner_id.country_id.name"/>
+                            <br/>
+                            <strong>TVA:</strong>
+                            <span t-esc="o.partner_id.vat"/>
+                        </div>
+                    </div>
+                    <h2>
                         <span t-if="o.name != '/'" t-field="o.name">INV/2023/0001</span>
+                        <span t-field="o.invoice_date">2023-09-12</span>
+
                     </h2>
                     <div class="oe_structure"></div>
                     <div id="informations" class="row mt-3 mb-1">
@@ -135,7 +180,6 @@
                                 <strong>Date:</strong>
                             </t>
                             <br/>
-                            <span t-field="o.invoice_date">2023-09-12</span>
                         </div>
                         <div
                                 t-attf-class="#{'col-auto col-3 mw-100' if report_type != 'html' else 'col'} mb-2"
@@ -190,9 +234,17 @@
                     <t t-set="display_discount"
                        t-value="any(l.discount for l in o.invoice_line_ids)"/>
                     <div class="oe_structure"></div>
+                    <t t-if="o.invoice_origin">
+                        <h3 class="text-center" style="margin-top: 20px;">
+                            Bon de commande N°
+                            <span t-esc="o.invoice_origin"/>
+                        </h3>
+                    </t>
+
+
                     <table class="table table-sm o_main_table table-borderless"
                            name="invoice_line_table">
-                        <thead>
+    <thead style="background-color: black; color: white;">
                             <tr>
                                 <th name="th_product_id" class="text-start">
                                     <span>Produit</span>
@@ -309,8 +361,11 @@
                                     </tr>
                                 </t>
                             </t>
+
                         </tbody>
+
                     </table>
+
                     <div>
                         <div id="right-elements"
                              t-attf-class="#{'col-5' if report_type != 'html' else 'col-12 col-md-5'} ms-5 d-inline-block float-end">
@@ -365,6 +420,22 @@
                                     </table>
                                 </div>
                             </div>
+
+<t t-if="user.signature">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+                            <div widget="html" t-field="user.signature"/>
+
+        <p t-esc="user.name" style="margin-top: 5px;" />
+    </div>
+</t>
+<t t-else="">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+        <br/><br/><br/>
+        <p t-esc="user.name" style="text-decoration: underline;" />
+    </div>
+</t>
                             <div class="mb-2">
                                 <p class="text-end lh-sm"
                                    t-if="o.company_id.display_invoice_amount_total_words">
