--- a/custom_addons/nn_commercial_docs/reports/purchase_order_report_template.xml
+++ b/custom_addons/nn_commercial_docs/reports/purchase_order_report_template.xml
@@ -193,6 +193,21 @@
                         </t>
                     </tbody>
                 </table>
+<t t-if="user.signature">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+                            <div widget="html" t-field="user.signature"/>
+
+        <p t-esc="user.name" style="margin-top: 5px;" />
+    </div>
+</t>
+<t t-else="">
+    <div class="text-center" style="margin-top: 50px;">
+        <p><strong>Signature</strong></p>
+        <br/><br/><br/>
+        <p t-esc="user.name" style="text-decoration: underline;" />
+    </div>
+</t>
 
                 <!-- Totals section -->
                 <div id="total" class="row justify-content-end">
